# otusalg-hw05

./: .gitignore  1.py  CMakeLists.txt  README.md  generators.h  heap.h  main.cpp  otusalg-hw05.pro
